refactor auth and remove casbin
